# dtpr-package

./: .buildinfo  .gitignore  CONTRIBUTING.md  CONTRIBUTORS  DEVELOPERS.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx.yml  static.yml
_modules/: index.html
_modules/dtpr/geometry/: _geometry.html  drift_cell.html  dt_geometry.html  layer.html  station.html  super_layer.html
_modules/dtpr/patches/: dt_patch.html
_sources/: index.rst.txt
_sources/src/base/: event.rst.txt  event_list.rst.txt  ntuple.rst.txt
_sources/src/geometry/: super_layer.rst.txt
_sources/src/patches/: dt_patch.rst.txt
docs/: conf.py
docs/_build/doctrees/: environment.pickle
docs/_build/html/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
docs/src/: index.rst
doctrees/: environment.pickle
dtpr/: cli.py
dtpr/base/: __init__.py  dtntuple.py  event.py  ntuple.py
dtpr/geometry/: __init__.py  _geometry.py  drift_cell.py  dt_geometry.py  layer.py  station.py  super_layer.py
dtpr/particles/: digi.py  gen_muon.py  ph2tp.py  segment.py  shower.py  simhit.py
dtpr/patches/: dt_patch.py
dtpr/utils/: config.py  create_templates.py  functions.py  genmuon_functions.py
src/base/: event.html  event_list.html  main.html  ntuple.html
src/geometry/: drift_cell.html  dt_geometry.html  layer.html  main.html  station.html  super_layer.html
src/particles/: digi.html  gen_muon.html  main.html  ph2tp.html  segment.html  shower.html  simhit.html
src/patches/: dt_patch.html  main.html
(+96 files in other folders)
